password crackers added

--- a/blogs/blog_ctf_tools.html
+++ b/blogs/blog_ctf_tools.html
@@ -67,7 +67,11 @@
                 </tr>
                 <tr>
                 <td style="text-align:center"><a href="https://29a.ch/photo-forensics/">Forensically Beta</a></td>
-                <td>Online tweak for steganography</td>
+                <td>Online tool for steganography, use it for magnification tool, geotags and string extraction </td>
+                </tr>
+                <tr>
+                <td style="text-shadow:center;"><a href="https://github.com/zardus/ctf-tools/blob/master/stegsolve/install">StegSolver</a></td>
+                <td>Steganography solver.</td>
                 </tr>
                 </tbody>
         </table>
@@ -105,6 +109,25 @@
                 <td style="text-align:center"><a href="https://www.rapidtables.com/convert/number/ascii-hex-bin-dec-converter.html">Rapid Tables</a></td>
                 </tr>
                 </tbody>
+        </table>
+        <h2>Password crackers:</h2>
+        <table class="table table-striped">
+          <thead>
+          <tr>
+          <th scope="col" style="text-align:center">Algorithm</th>
+          <th scope="col" style="text-align:center">Link</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+          <td style="text-align:center"><a href="https://github.com/magnumripper/JohnTheRipper">John The Ripper</a></td>
+          <td style="text-align:center"> Its primary purpose is to detect weak Unix passwords.</td>
+          </tr>
+          <tr>
+          <td style="text-align:center"><a href="https://github.com/hyc/fcrackzip">FcrackZip</a></td>
+          <td style="text-align:center">Fast password cracker that even performs Brute force attack</td>
+          </tr>
+          </tbody>
         </table>
         <h2>QR Readers:</h2>
         <p>QR readers use different algorithms to decode choose which algorithm and corresponding tool you need.</p>
